--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,10 @@ dependencies {
 
     implementation 'org.springframework:spring-jdbc'
     implementation 'org.postgresql:postgresql'
+
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
+    implementation 'io.jsonwebtoken:jjwt-impl:0.11.1'
+    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'
 }
 
 test {
