--- a/build.gradle
+++ b/build.gradle
@@ -40,6 +40,17 @@ dependencies {
 
     //implementation group: 'com.c4-soft.springaddons', name: 'spring-security-oauth2-addons', version: '4.5.0'
 
+    //swagger
+//    implementation 'io.springfox:springfox-swagger2:3.0.0'
+//    implementation 'io.springfox:springfox-boot-starter:3.0.0'
+//    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
+ //   implementation 'io.springfox:springfox-swagger2:2.9.2'
+    //implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+ //   implementation 'io.springfox:springfox-boot-starter:3.0.0'
+
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
+
+
 }
 
 test {
