--- a/build.gradle
+++ b/build.gradle
@@ -1,58 +1,1 @@
-plugins {
-    id 'java'
-    id 'eclipse'
-    id "org.springframework.boot" version("3.0.6")
-    id 'io.spring.dependency-management' version("1.1.0")
-}
-
-group = 'org.example'
-version = '1.0-SNAPSHOT'
-
-repositories {
-    mavenCentral()
-}
-
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
-
-    implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    developmentOnly 'org.springframework.boot:spring-boot-devtools'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    implementation 'org.springframework.boot:spring-boot-starter-validation'
-
-    implementation 'org.springframework:spring-jdbc'
-    implementation 'org.postgresql:postgresql'
-
-    implementation 'io.jsonwebtoken:jjwt-api:0.11.1'
-    implementation 'io.jsonwebtoken:jjwt-impl:0.11.1'
-    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'
-
-    compileOnly 'org.projectlombok:lombok'
-    annotationProcessor 'org.projectlombok:lombok'
-
-    implementation 'org.springframework.boot:spring-boot-starter-security'
-
-    implementation 'org.springframework.boot:spring-boot-configuration-processor'
-
-    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
-
-    //implementation group: 'com.c4-soft.springaddons', name: 'spring-security-oauth2-addons', version: '4.5.0'
-
-    //swagger
-//    implementation 'io.springfox:springfox-swagger2:3.0.0'
-//    implementation 'io.springfox:springfox-boot-starter:3.0.0'
-//    implementation 'io.springfox:springfox-swagger-ui:3.0.0'
- //   implementation 'io.springfox:springfox-swagger2:2.9.2'
-    //implementation 'io.springfox:springfox-swagger-ui:2.9.2'
- //   implementation 'io.springfox:springfox-boot-starter:3.0.0'
-
-    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'
-
-
-}
-
-test {
-    useJUnitPlatform()
-}
+plugins {    id 'java'    id 'eclipse'    id "org.springframework.boot" version("3.0.6")    id 'io.spring.dependency-management' version("1.1.0")}group = 'org.example'version = '1.0-SNAPSHOT'repositories {    mavenCentral()}dependencies {    implementation 'org.springframework.boot:spring-boot-starter-actuator'    testImplementation platform('org.junit:junit-bom:5.9.1')    testImplementation 'org.junit.jupiter:junit-jupiter'    implementation 'org.springframework.boot:spring-boot-starter-web'    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'    developmentOnly 'org.springframework.boot:spring-boot-devtools'    testImplementation 'org.springframework.boot:spring-boot-starter-test'    implementation 'org.springframework.boot:spring-boot-starter-validation'    implementation 'org.springframework:spring-jdbc'    implementation 'org.postgresql:postgresql'    implementation 'io.jsonwebtoken:jjwt-api:0.11.1'    implementation 'io.jsonwebtoken:jjwt-impl:0.11.1'    implementation 'io.jsonwebtoken:jjwt-jackson:0.11.1'    compileOnly 'org.projectlombok:lombok'    annotationProcessor 'org.projectlombok:lombok'    implementation 'org.springframework.boot:spring-boot-starter-security'    implementation 'org.springframework.boot:spring-boot-configuration-processor'    implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'    //implementation group: 'com.c4-soft.springaddons', name: 'spring-security-oauth2-addons', version: '4.5.0'    //swagger//    implementation 'io.springfox:springfox-swagger2:3.0.0'//    implementation 'io.springfox:springfox-boot-starter:3.0.0'//    implementation 'io.springfox:springfox-swagger-ui:3.0.0' //   implementation 'io.springfox:springfox-swagger2:2.9.2'    //implementation 'io.springfox:springfox-swagger-ui:2.9.2' //   implementation 'io.springfox:springfox-boot-starter:3.0.0'    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.1.0'}test {    useJUnitPlatform()}
